<!--
    PswGenDesktop - Manages your websites and repeatably generates passwords for them
    PswGenDroid - Generates your passwords managed by PswGenDesktop on your mobile  
   
        Copyright (C) 2005-2017 Uwe Damken
   
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
   
        http://www.apache.org/licenses/LICENSE-2.0
   
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="de.dknapps.pswgendroid.ServiceDetailFragment" >
    
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
		<TextView android:id="@+id/service_detail"
		    style="?android:attr/textAppearanceLarge"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textIsSelectable="true" />
		
		<TextView android:id="@+id/label_additional_info"
		    style="?android:attr/textAppearanceMedium"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/label_additional_info"
		    android:textIsSelectable="false" />
		
		<TextView android:id="@+id/additional_info"
		    style="?android:attr/textAppearanceSmall"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textIsSelectable="true" />
		
		<TextView android:id="@+id/label_login_url"
		    style="?android:attr/textAppearanceMedium"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/label_login_url"
		    android:textIsSelectable="false" />
		
		<TextView android:id="@+id/login_url"
		    style="?android:attr/textAppearanceSmall"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textIsSelectable="true" />
		
		<TextView android:id="@+id/label_login_info"
		    style="?android:attr/textAppearanceMedium"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/label_login_info"
		    android:textIsSelectable="false" />
		
		<TextView android:id="@+id/login_info"
		    style="?android:attr/textAppearanceSmall"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textIsSelectable="true" />
		
		<TextView android:id="@+id/label_additional_login_info"
		    style="?android:attr/textAppearanceMedium"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/label_additional_login_info"
		    android:textIsSelectable="false" />
		
		<TextView android:id="@+id/additional_login_info"
		    style="?android:attr/textAppearanceSmall"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textIsSelectable="true" />

		<TextView
			android:id="@+id/label_use_old_passphrase"
			style="?android:attr/textAppearanceMedium"
			android:textColor="@android:color/holo_red_dark"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:text="@string/label_use_old_passphrase"
			android:textIsSelectable="false"/>

		<Button android:id="@+id/button_open_and_provide"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_open_and_provide"
		    android:onClick="onClickButtonOpenAndProvide" />
		
		<Button android:id="@+id/button_provide"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_provide"
		    android:onClick="onClickButtonProvide" />

		<Button android:id="@+id/button_open_url"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_open_url"
		    android:onClick="onClickButtonOpenUrl" />

		<Button android:id="@+id/button_copy_login_info"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_copy_login_info"
		    android:onClick="onClickButtonCopyLoginInfo" />
		
		<Button android:id="@+id/button_copy_password"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_copy_password"
		    android:onClick="onClickButtonCopyPassword" />
		
		<Button android:id="@+id/button_display_password"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/button_display_password"
		    android:onClick="onClickButtonDisplayPassword" />
		
	</LinearLayout>
	
</ScrollView>