<!--
    PswGenDesktop - Manages your websites and repeatably generates passwords for them
    PswGenDroid - Generates your passwords managed by PswGenDesktop on your mobile

        Copyright (C) 2005-2018 Uwe Damken

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.AboutFragment"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/labelServiceAbbreviation"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_service_abbreviation"
            android:textIsSelectable="false"
            android:labelFor="@+id/serviceAbbreviation"
            />

        <TextView
            android:id="@+id/serviceAbbreviation"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/labelLoginInfo"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_login_info"
            android:textIsSelectable="false"
            android:labelFor="@+id/loginInfo"
            />

        <TextView
            android:id="@+id/loginInfo"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/labelPassword"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textIsSelectable="false"
            android:labelFor="@+id/password"
            />

        <TextView
            android:id="@+id/password"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/labelPasswordExplanation"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_password_explanation"
            android:textIsSelectable="false"
            android:labelFor="@+id/passwordExplanation"
            />

        <TextView
            android:id="@+id/passwordExplanation"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textIsSelectable="true"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
